@@ -143,6 +143,9 @@ sub start_server {
    socketpair $server_fh,$gimp_fh,PF_UNIX,SOCK_STREAM,AF_UNIX
       or socketpair $server_fh,$gimp_fh,PF_UNIX,SOCK_STREAM,PF_UNSPEC
       or croak "unable to create socketpair for gimp communications: $!";
+
+   # do it here so it i done only once
+   require Gimp::Config;
    $gimp_pid = fork;
    if ($gimp_pid > 0) {
       Gimp::ignore_functions(@Gimp::gimp_gui_functions) unless $opt=~s/(^|:)gui//;
@@ -155,16 +158,15 @@ sub start_server {
          open STDOUT,">/dev/null";
          open STDERR,">&1";
       }
+      my @args;
       my $args = &Gimp::RUN_NONINTERACTIVE." ".
                  (&Gimp::_PS_FLAG_BATCH | &Gimp::_PS_FLAG_QUIET)." ".
                  fileno($gimp_fh);
+      push(@args,"--no-data") if $opt=~s/(^|:)no-?data//;
+      push(@args,"-n") unless $opt=~s/(^|:)gui//;
+      push(@args,"--verbose") if $Gimp::verbose;
       { # block to suppress warning with broken perls (e.g. 5.004)
-         require Gimp::Config;
-         my @args;
-         push(@args,"--no-data") if $opt=~s/(^|:)no-?data//;
-         push(@args,"-n") unless $opt=~s/(^|:)gui//;
-         push(@args,"--verbose") if $Gimp::verbose;
-         exec $Gimp::Config{GIMP_PATH},
+         exec $Gimp::Config{GIMP},
               "--no-splash",
               @args,
               "-b",
