@@ -1,6 +1,7 @@
 Revision history for Gimp-Perl extension.
 
 	- scm2perl had broken cdr and cddr stubs...
+        - fixed examples/font_table.
 
 1.092 Wed Jun  2 14:52:29 CEST 1999
 	- testsuite failed when !HAVE_PDL (and the whole package broke on
